Fix: remove horizontal scroll

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -25,6 +25,9 @@ p
   margin: 0
   padding: 0
 
+.page
+  overflow: hidden
+
 .container
   max-width: 1140px
   margin: 0 auto
