--- a/style/style.css
+++ b/style/style.css
@@ -1084,6 +1084,10 @@ p {
   padding: 0;
 }
 
+.page {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
